--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^14.2.13",
-    "next": "^14.2.5",
+    "framer-motion": "^11.11.17",
+    "motion": "^11.11.17",
+    "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
