--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.17",
     "motion": "^11.11.17",
     "next": "^15.0.3",
