--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "motion": "^11.11.17",
     "next": "^15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-scroll": "^1.9.0"
   },
   "devDependencies": {
     "@types/node": "^20",
